[tool.poetry]
name = "misc-481"
version = "0.1.0"
description = ""
authors = ["nicholas <nickptran@gmail.com>"]
readme = "README.md"
packages = [{include = "misc_481"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
ipykernel = "^6.22.0"
ipython = "^8.12.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
